# Atom-JoyStick

./: README.md
examples/StampFlyController/: .gitignore  data_save.py  example.ipynb  example_data.csv  platformio.ini  pyproject.toml  send_dummy_data.py  sysid.ipynb  vicon_stampfly_bridge.py  vicon_test.py
examples/StampFlyController/serial_mock/: CMakeLists.txt  README.md  build.sh  run.sh  serial_mock.cpp  test_serial_mock.py
examples/StampFlyController/src/: app_lvgl.cpp  app_lvgl.h  main.cpp  main.h
examples/StampFlyController/src/images/: cyclone_64_75.c
